--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 
     <div id="background">
 
-        <div class="hiderDiv1 hide">
+        <div id="hiderDiv1">
     
             <section id="preGamePage">
 
                 <h1>Wellcome to the <span>EPIC</span> Rock, Paper, Scissor game</h1>
 
-                <button>Press to start</button>
+                <button id="startBtn">Press to start</button>
 
             </section>
 
         </div>
 
-        <div class="hiderDiv2 hide">
+        <div id="hiderDiv2" class="hide">
 
             <section id="gameScreen">
 
@@ -38,10 +38,48 @@
                     <p> Choose your destiny! </p>
 
                     <div id="R_P_S_Cont">
-                        <div class="choiceContainer rock"></div>
-                        <div class="choiceContainer paper"></div>
-                        <div class="choiceContainer scissor"></div>
+                        <button id="rock" class="choiceContainer">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="100%" width="100%" version="1.1" id="Layer_1" viewBox="0 0 511.999 511.999" xml:space="preserve">
+                                <path style="fill:#D7D5D9;" d="M76.771,334.156c0,0-101.409-194.446,182.729-220.202S476.537,299.25,371.699,331.119  s-73.762,89.833-168.277,89.132C108.905,419.551,76.771,334.156,76.771,334.156z"></path>
+                                <path style="opacity:0.27;fill:#ACAAB1;enable-background:new    ;" d="M425.414,140.874  c40.135,58.352-10.584,148.002-76.002,167.888c-104.84,31.869-73.762,89.834-168.277,89.132  c-36.42-0.27-63.569-13.119-83.195-28.808c19.091,23.685,52.49,50.771,105.551,51.165c94.515,0.7,63.439-57.263,168.277-89.132  C446.329,308.454,501.8,195.16,425.414,140.874z"></path>
+                                <path d="M468.956,218.318c-0.045-0.199-0.102-0.393-0.162-0.584c0.717-9.37,0.218-18.551-1.554-27.289  c-3.865-19.047-13.454-35.538-28.185-48.82c-0.141-0.138-0.286-0.266-0.434-0.391c-8.252-7.354-18.088-13.717-29.427-18.963  c-36.368-16.826-87.362-22.162-151.562-15.863c-99.424,9.757-163.82,40.768-191.4,92.172c-1.759,3.279-3.358,6.645-4.802,10.089  c-0.015,0.032-0.028,0.067-0.044,0.1c-0.072,0.172-0.143,0.345-0.215,0.518c-0.01,0.027-0.022,0.054-0.032,0.081  c-10.216,24.805-12.308,53.7-5.995,84.344c5.051,24.521,13.734,42.059,15.226,44.96c1.342,3.322,10.13,23.919,29.579,44.614  c8.54,9.088,19.938,18.945,34.457,27.111c0.302,0.22,0.616,0.427,0.957,0.606c0.245,0.128,0.495,0.235,0.746,0.334  c12.391,6.741,26.996,12.212,43.977,14.97c0.377,0.096,0.759,0.153,1.142,0.189c7.338,1.131,15.11,1.761,23.34,1.761  c53.364,0,69.706-17.934,88.627-38.699c15.917-17.466,33.956-37.263,81.246-52.022c28.062-8.759,54.545-29.913,72.66-58.039  c11.476-17.82,18.652-37.104,21.082-55.853C469.05,222.079,469.377,220.204,468.956,218.318z M408.656,228.244  c-0.082-5.659-1.599-10.598-3.739-14.675c19.46-3.321,35.686-10.837,47.099-21.668c0.116,0.52,0.239,1.038,0.345,1.564  c1.354,6.672,1.811,13.57,1.479,20.554C444.791,216.289,426.971,221.137,408.656,228.244z M369.917,323.046  c-51.217,15.985-71.58,38.332-87.943,56.289c-17.851,19.589-30.748,33.743-77.407,33.743c-3.106,0-6.169-0.103-9.197-0.293  c6.869-8.843,18.532-21.038,33.123-25.316c4.023-1.18,6.327-5.397,5.147-9.419c-1.18-4.023-5.397-6.329-9.419-5.147  c-23.266,6.823-39.665,28.203-46,37.715c-10.044-1.949-19.59-5.061-28.623-9.314c5.97-8.657,16.662-20.647,29.01-22.984  c28.003-5.297,32.869-32.204,33.062-33.347c0.056-0.329,0.071-0.285,0.078-0.52c0.331-1.514,4.824-17.835,43.934-22.481  c4.162-0.495,7.137-4.27,6.642-8.433c-0.493-4.162-4.268-7.138-8.432-6.642c-21.928,2.605-38.092,8.994-48.04,18.987  c-7.386,7.42-8.876,14.392-9.173,16.671c-0.391,1.909-4.117,17.675-20.893,20.849c-19.09,3.612-32.995,20.79-39.514,30.561  c-8.874-5.648-17.175-12.535-24.872-20.659c-18.921-19.973-26.961-40.326-27.04-40.53c-0.106-0.276-0.233-0.553-0.371-0.815  c-0.329-0.622-29.918-57.786-10.696-111.913c3.922,1.125,10.628,4.221,19.11,12.703c2.654,2.656,4.959,5.102,6.992,7.259  c10.922,11.597,17.303,17.438,35.916,17.438c2.528,0,5.283-0.107,8.304-0.324c4.182-0.299,7.329-3.931,7.03-8.111  c-0.299-4.181-3.935-7.329-8.111-7.03c-19.144,1.366-21.371-1.002-32.088-12.38c-2.106-2.236-4.492-4.77-7.309-7.586  c-9.261-9.261-17.471-13.749-23.72-15.886c0.083-0.157,0.16-0.315,0.245-0.472c8.168-15.186,20.111-28.417,35.718-39.691  c0.269-0.151,0.534-0.315,0.788-0.502c0.204-0.15,20.539-14.868,34.156-4.119c1.153,0.909,1.598,1.599,1.629,1.913  c0.224,2.223-4.478,7.784-7.287,11.108c-5.529,6.539-11.245,13.301-10.515,21.482c0.389,4.343,2.542,8.161,6.402,11.352  c17.651,14.588,31.007,2.173,43.92-9.835c3.985-3.706,8.107-7.537,12.89-11.366c3.829-3.066,7.162-4.442,8.693-3.584  c3.722,2.08,7.752,14.816,5.056,36.622c-0.514,4.16,2.441,7.949,6.601,8.464c0.317,0.039,0.63,0.059,0.941,0.059  c3.776,0,7.048-2.816,7.523-6.66c0.752-6.084,1.067-11.794,0.973-17.062c1.298-3.044,6.071-12.331,16.11-12.746  c4.189-0.173,7.443-3.709,7.27-7.897c-0.173-4.188-3.704-7.459-7.897-7.27c-8.017,0.331-14.133,3.418-18.702,7.274  c-2.317-6.62-5.842-11.45-10.473-14.037c-5.202-2.905-13.861-4.398-25.582,4.985c-5.221,4.179-9.747,8.387-13.739,12.1  c-14.668,13.638-17.351,14.676-23.914,9.252c-0.818-0.675-0.949-1.014-0.952-1.004c-0.159-1.876,4.489-7.373,6.987-10.328  c5.469-6.469,11.668-13.801,10.799-22.429c-0.474-4.702-2.939-8.843-7.327-12.308c-2.14-1.69-4.336-3.03-6.558-4.077  c28.468-11.727,63.817-19.705,105.942-23.839c73.995-7.261,129.914,1.895,162.478,25.484c-10.023,7.437-29.384,20.14-50.46,25.099  c-4.053,0.953-7.979,2.259-11.766,3.803c-5.573-0.483-27.41-3.703-47-6.803c-4.132-0.654-8.027,2.171-8.683,6.31  c-0.655,4.14,2.171,8.028,6.311,8.683c11.499,1.82,20.415,3.195,27.378,4.224c-16.831,12.153-27.67,26.135-28.365,27.044  c-2.544,3.327-1.91,8.084,1.415,10.632c1.376,1.055,2.999,1.565,4.61,1.565c2.279,0,4.534-1.022,6.03-2.969  c0.205-0.267,18.271-23.505,42.601-34.038c0.073-0.031,0.147-0.064,0.221-0.096c3.461-1.485,7.047-2.713,10.726-3.578  c25.924-6.099,48.683-21.92,58.73-29.701c5.349,5.582,9.701,11.751,13.006,18.494c-9.296,12.005-25.589,20.245-46.295,23.33  c-3.716,0.554-7.235,1.245-10.597,2.027c-0.122,0.023-0.243,0.055-0.365,0.084c-37.593,8.873-53.175,30.597-53.875,31.601  c-0.05,0.07-0.097,0.141-0.144,0.213c-6.965,10.731-29.706,37.683-51.027,33.61c-4.118-0.784-8.093,1.914-8.879,6.03  c-0.787,4.117,1.913,8.093,6.03,8.88c2.496,0.477,4.955,0.698,7.386,0.698c31.542-0.005,56.932-37.472,59.114-40.785  c1.07-1.453,12.984-16.891,41.188-24.552c2.71,2.92,6.498,9.004,3.54,18.363c-12.787,6.023-24.567,13.152-32.31,21.271  c-2.892,3.034-2.779,7.838,0.255,10.731c1.469,1.402,3.354,2.097,5.237,2.097c2.003,0,4.002-0.788,5.494-2.352  c17.012-17.84,59.901-31.066,80.594-36.633C442.98,270.746,410.101,310.505,369.917,323.046z"></path>
+                            </svg>
+                        </button>
+                        <button id="paper" class="choiceContainer">
+                            <svg class="paperSVG" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000" height="100%" width="100%" version="1.1" id="Capa_1" viewBox="0 0 612 612" xml:space="preserve">
+                                <g>
+                                    <g>
+                                        <g>
+                                            <g>
+                                                <path d="M577.661,612H34.339c-10.358,0-18.751-8.396-18.751-18.751V18.751C15.588,8.396,23.98,0,34.339,0h543.322      c10.355,0,18.751,8.396,18.751,18.751v574.497C596.412,603.604,588.016,612,577.661,612z M53.09,574.497h505.82V37.502H53.09      V574.497z"/>
+                                            </g>
+                                            <g>
+                                                <path d="M476.951,157.596H135.047c-10.355,0-18.751-8.393-18.751-18.751c0-10.355,8.396-18.751,18.751-18.751h341.905      c10.355,0,18.751,8.396,18.751,18.751C495.702,149.204,487.307,157.596,476.951,157.596z"/>
+                                            </g>
+                                            <g>
+                                                <path d="M476.951,269.033H135.047c-10.355,0-18.751-8.393-18.751-18.751c0-10.355,8.396-18.751,18.751-18.751h341.905      c10.355,0,18.751,8.396,18.751,18.751C495.702,260.641,487.307,269.033,476.951,269.033z"/>
+                                            </g>
+                                            <g>
+                                                <path d="M476.951,380.469H135.047c-10.355,0-18.751-8.393-18.751-18.751c0-10.355,8.396-18.751,18.751-18.751h341.905      c10.355,0,18.751,8.396,18.751,18.751C495.702,372.076,487.307,380.469,476.951,380.469z"/>
+                                            </g>
+                                            <g>
+                                                <path d="M278.154,491.906H135.047c-10.355,0-18.751-8.394-18.751-18.751c0-10.355,8.396-18.751,18.751-18.751h143.106      c10.355,0,18.751,8.396,18.751,18.751C296.905,483.512,288.509,491.906,278.154,491.906z"/>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg>
+                        </button>
+                        <button id="scissor" class="choiceContainer">
+                            <svg class="scissorSVG" fill="#000000" height="100%" width="100%" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 30.556 30.556" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path d="M26.311,23.224c-0.812-1.416-2.072-2.375-3.402-2.736c-1.051-0.287-2.141-0.199-3.084,0.334l-2.805-4.904 c1.736-3.463,5.633-11.227,6.332-12.451C24.258,1.884,22.637,0,22.637,0l-7.36,12.872L7.919,0c0,0-1.62,1.884-0.715,3.466 c0.7,1.225,4.598,8.988,6.332,12.451l-2.804,4.904c-0.943-0.533-2.035-0.621-3.084-0.334c-1.332,0.361-2.591,1.32-3.403,2.736 c-1.458,2.547-0.901,5.602,1.239,6.827c0.949,0.545,2.048,0.632,3.107,0.345c1.329-0.363,2.591-1.322,3.402-2.735 c0.355-0.624,0.59-1.277,0.71-1.926v0.001c0.001-0.005,0.001-0.01,0.006-0.015c0.007-0.054,0.017-0.108,0.022-0.167 c0.602-4.039,1.74-6.102,2.545-7.104c0.807,1.002,1.946,3.064,2.547,7.104c0.006,0.059,0.016,0.113,0.021,0.167 c0.004,0.005,0.004,0.01,0.006,0.015v-0.001c0.121,0.648,0.355,1.302,0.709,1.926c0.812,1.413,2.074,2.372,3.404,2.735 c1.059,0.287,2.158,0.2,3.109-0.345C27.213,28.825,27.768,25.771,26.311,23.224z M9.911,26.468 c-0.46,0.803-1.189,1.408-1.948,1.615c-0.338,0.092-0.834,0.148-1.289-0.113c-0.97-0.555-1.129-2.186-0.346-3.556 c0.468-0.812,1.177-1.403,1.95-1.614c0.335-0.091,0.831-0.146,1.288,0.113C10.537,23.47,10.695,25.097,9.911,26.468z M23.881,27.97 c-0.455,0.262-0.949,0.205-1.287,0.113c-0.76-0.207-1.488-0.812-1.949-1.615c-0.783-1.371-0.625-2.998,0.346-3.555 c0.457-0.26,0.953-0.204,1.289-0.113c0.771,0.211,1.482,0.802,1.947,1.614C25.01,25.784,24.852,27.415,23.881,27.97z"></path> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> </g> </g></svg>
+                        </button>
                     </div>
+
+                </div>
+
+                <div id="drawTextContainer">
+
+                    <p>Draw! Try Again</p>
 
                 </div>
 
@@ -72,7 +110,7 @@
 
         </div>
 
-        <div class="hiderDiv3 ">
+        <div class="hiderDiv3 hide">
 
             <section id="afterGameScreenCont">
 
@@ -92,6 +130,6 @@
     </div>
 
 
-	<script src="app.js"></script>
+	<script src="app.js" defer></script>
   </body>
 </html>
